# model-switchboard

./: .env.example  .flake8  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  fix-issues-with-bob.yml  fix-pr-reviews-with-bob-trigger.yml  fix-pr-reviews-with-bob.yml  publish.yml  test-pr-with-bob-trigger.yml  test-pr-with-bob.yml
llm_examples/: azure_openai_example.py  ibm_watsonx_ai_example.py  litellm_ibm_example.py  litellm_ollama_example.py  litellm_rits_example.py  litellm_watsonx_example.py
llm_switchboard/: __init__.py
llm_switchboard/llm/: __init__.py  base.py  logging_utils.py  types.py
llm_switchboard/llm/providers/ibm_watsonx_ai/: ibm_watsonx_ai.py
llm_switchboard/llm/providers/litellm/: ibm_litellm.py  litellm.py  ollama.py  rits.py  watsonx.py
llm_switchboard/llm/providers/openai/: openai.py
model_switchboard/llm/: __init__.py  base.py  logging_utils.py  output_parser.py
model_switchboard/llm/providers/auto_from_env/: auto_from_env.py
model_switchboard/llm/providers/ibm_watsonx_ai/: ibm_watsonx_ai.py
model_switchboard/llm/providers/litellm/: ibm_litellm.py  litellm.py  ollama.py  rits.py  watsonx.py
model_switchboard/llm/providers/openai/: openai.py
tests/: README.md  conftest.py  test_auto_from_env.py  test_azure_openai.py  test_base.py  test_ibm_litellm.py  test_init.py  test_litellm_ollama.py  test_litellm_rits.py  test_litellm_watsonx.py  test_logging.py  test_output_parser.py  test_types.py  test_watsonx_ai.py
