[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-switchboard"
version = "0.1.0"
description = "A provider-agnostic Python interface for routing generation calls across LiteLLM, OpenAI, Ollama, and Watsonx"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Model Switchboard maintainers" },
]
keywords = ["llm", "openai", "watsonx", "litellm", "ollama", "model-routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "jsonschema>=4.25.1",
    "rich>=13.0.0",
    "litellm>=1.0.0,<1.82.7",
]

[project.urls]
Homepage = "https://github.com/skillberry-ai/model-switchboard"
Repository = "https://github.com/skillberry-ai/model-switchboard"
Issues = "https://github.com/skillberry-ai/model-switchboard/issues"

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]

ollama = []

watsonx = [
    "ibm-watsonx-ai>=1.0.0",
]

rits = []

all = [
    "openai>=1.0.0",
    "ibm-watsonx-ai>=1.0.0",
]

dev = [
    "build>=1.4.4",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "twine>=6.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["model_switchboard*"]
exclude = ["tests*", "llm_examples*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
log_cli = true
pythonpath = ["."]
addopts = "-m 'not llm'"
markers = [
    "llm: marks tests as provider tests that call external services",
]

[tool.coverage.run]
source = ["model_switchboard"]

[tool.coverage.report]
show_missing = true
skip_empty = true
